--- a/index.html
+++ b/index.html
@@ -8,102 +8,122 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <!-- normalizer -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <!--  -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- the HEADER for everyone -->
+    <!--! the HEADER for everyone -->
     <header class="header-site">
-      <nav class="nav-site">
-        <!-- Logo -->
-        <a class="logo link" href="./index.html">Web<span class="logo-studio-header">Studio</span> </a>
-        <ul class="menu list">
-          <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
-          <!-- Прибрала current  і перехід до контактів через якор #contacts, бо автоперевірка лається -->
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list list">
-          <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="nav-site">
+          <!-- Logo -->
+          <a class="logo link" href="./index.html">Web<span class="logo-studio-header">Studio</span> </a>
+          <ul class="menu list">
+            <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+            <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+            <!-- Прибрала current  і перехід до контактів через якор #contacts, бо автоперевірка лається -->
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list list">
+            <li class="contacts-item"><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-item"><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
-    <!-- MAIN -->
+    <!--! MAIN -->
     <main>
-      <!-- section 1 hero -->
+      <!--? section 1 hero -->
       <section class="hero">
-        <h1 class="title-site">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button class="order-btn" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="title-site">Effective Solutions for Your Business</h1>
+          <button class="order-btn" type="button">Order Service</button>
+        </div>
       </section>
-      <!-- section 2 About our company -->
+      <!--? section 2 About our company -->
       <section class="about-company">
-        <!-- Hidden header -->
-        <h2 class="hidden-header">About our company</h2>
-        <ul class="list">
-          <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-          </li>
-          <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-          </li>
-          <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-        </ul>
+        <div class="container about-company-container">
+          <!-- Hidden header -->
+          <h2 class="hidden-header">About our company</h2>
+          <ul class="about-company-list list">
+            <li class="about-company-item">
+              <h3 class="subtitle">Strategy</h3>
+              <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li class="about-company-item">
+              <h3 class="subtitle">Punctuality</h3>
+              <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li class="about-company-item">
+              <h3 class="subtitle">Diligence</h3>
+              <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li class="about-company-item">
+              <h3 class="subtitle">Technologies</h3>
+              <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <!-- section 3  What are we doing-->
-      <section>
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li><img src="./images/doing/monitor.jpg" alt="Monitor screen with analytical information." width="360" height="300" /></li>
-          <li><img src="./images/doing/phones.jpg" alt="Phone screen and its screenshots with correspondence." width="360" height="300" /></li>
-          <li><img src="./images/doing/laptop-phone.jpg" alt="Phone in hand on the background of a laptop - the choice of a place to relax." width="360" height="300" /></li>
-        </ul>
+      <!--? section 3  What are we doing-->
+      <section class="doing">
+        <div class="container doing-container">
+          <h2 class="title">What are we doing</h2>
+          <ul class="doing-list list">
+            <li class="doing-item"><img src="./images/doing/monitor.jpg" alt="Monitor screen with analytical information." width="360" height="300" /></li>
+            <li class="doing-item"><img src="./images/doing/phones.jpg" alt="Phone screen and its screenshots with correspondence." width="360" height="300" /></li>
+            <li class="doing-item"><img src="./images/doing/laptop-phone.jpg" alt="Phone in hand on the background of a laptop - the choice of a place to relax." width="360" height="300" /></li>
+          </ul>
+        </div>
       </section>
-      <!-- section 4 Our Team -->
+      <!--? section 4 Our Team -->
       <section class="team">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/employees/mark-guerrero.jpg" alt="photo of Mark Guerrero" width="264" height="260" />
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/employees/tom-ford.jpg" alt="photo of Tom Ford" width="264" height="260" />
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/employees/camila-garcia.jpg" alt="photo of Camila Garcia" width="264" height="260" />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/employees/daniel-wilson.jpg" alt="hoto of Daniel Wilson" width="264" height="260" />
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img src="./images/employees/mark-guerrero.jpg" alt="photo of Mark Guerrero" width="264" height="260" />
+              <div class="team-info">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="profession">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/employees/tom-ford.jpg" alt="photo of Tom Ford" width="264" height="260" />
+              <div class="team-info">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/employees/camila-garcia.jpg" alt="photo of Camila Garcia" width="264" height="260" />
+              <div class="team-info">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="profession">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/employees/daniel-wilson.jpg" alt="hoto of Daniel Wilson" width="264" height="260" />
+              <div class="team-info">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="profession">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <!-- the FOOTER for everyone -->
+    <!--! the FOOTER for everyone -->
     <footer class="footer-site">
-      <!-- Logo -->
-      <a class="logo link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <div class="container footer-container">
+        <!-- Logo -->
+        <a class="logo link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
   </body>
 </html>
