--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <main>
       <!--? section 1 hero -->
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container">
           <h1 class="title-site">Effective Solutions for Your Business</h1>
           <button class="order-btn" type="button">Order Service</button>
         </div>
       </section>
       <!--? section 2 About our company -->
       <section class="about-company">
-        <div class="container about-company-container">
+        <div class="container">
           <!-- Hidden header -->
           <h2 class="hidden-header">About our company</h2>
           <ul class="about-company-list list">
@@ -71,7 +71,7 @@
       </section>
       <!--? section 3  What are we doing-->
       <section class="doing">
-        <div class="container doing-container">
+        <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="doing-list list">
             <li class="doing-item"><img src="./images/doing/monitor.jpg" alt="Monitor screen with analytical information." width="360" height="300" /></li>
@@ -82,7 +82,7 @@
       </section>
       <!--? section 4 Our Team -->
       <section class="team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -119,10 +119,12 @@
     </main>
     <!--! the FOOTER for everyone -->
     <footer class="footer-site">
-      <div class="container footer-container">
+      <div class="container">
         <!-- Logo -->
-        <a class="logo link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer-info">
+          <a class="logo logo-footer link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
+          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
       </div>
     </footer>
   </body>
