--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <main>
       <!--? Our projects -->
       <section class="projects">
-        <div class="container projects-container">
+        <div class="container >
           <!-- Hidden header -->
           <h1 class="hidden-header">Portfolio</h1>
           <!-- Filter -->
@@ -139,10 +139,12 @@
     </main>
     <!--! the FOOTER for everyone -->
     <footer class="footer-site">
-      <div class="container footer-container">
+      <div class="container">
         <!-- Logo -->
-        <a class="logo link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer-info">
+          <a class="logo logo-footer link" href="./index.html">Web<span class="logo-studio-footer">Studio</span> </a>
+          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
       </div>
     </footer>
   </body>
