--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <main>
       <!--? Our projects -->
       <section class="projects">
-        <div class="container >
+        <div class="container">
           <!-- Hidden header -->
           <h1 class="hidden-header">Portfolio</h1>
           <!-- Filter -->
